Results and new functions to status bar

--- a/css/style.css
+++ b/css/style.css
@@ -11,3 +11,8 @@ body { font-family:'Raleway', Verdana, Tahoma, sans-serif;  font-size:12px; colo
 #status { overflow-y:scroll; height:80%; }
 #status p { margin:10px 0; }
 #controls { bottom:0px; height:10%; border-top:1px solid #ccc; }
+
+.resultDiv { display: block; width: 70px; float: left; text-align: center; }
+.result { font-weight: bold; font-size: 32px; }
+.result.player { color:#58a770; }
+.result.computer { color:#ff5d5d; }
