--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,9 @@
 @import url(http://fonts.googleapis.com/css?family=Raleway:400,300,700);
 @import url(reset.css);
 
-body { font-family:'Raleway', Verdana, Tahoma, sans-serif;  font-size:12px; color:#333; line-height:16px; }
+body { font-family:'Raleway', Verdana, Tahoma, sans-serif;  font-size:12px; color:#333; line-height:16px; overflow:none; }
 
-#game { position:absolute; width:80%; height:100%; background-color:#fff; /*background-image:url(../imgs/table.jpg); background-size:cover;*/ }
+#game { position:absolute; width:80%; height:100%; background-color:#fff; background-image:url(../imgs/table.jpg); background-size:cover; }
 #statusContainer { min-width:260px; background-color:#f5f5f5; width:20%; height:100%; position:fixed; top:0; right:0; border-left:1px solid #ccc; }
 #statusContainer div { position:relative; }
 #statusContainer div div { padding:15px; }
@@ -24,3 +24,8 @@ body { font-family:'Raleway', Verdana, Tahoma, sans-serif;  font-size:12px; colo
 .button { padding:12px; color:#fff; background-color:#45a1c3; font-size:14px; font-weight:700; text-decoration:none; text-align:center; border-radius:3px; }
 .button:hover { background-color:#3d95b5; }
 .block { display:block; }
+
+#computerHand { position:absolute; top:0; left:15%; }
+#playerHand { position:absolute; bottom:0; left:25%; }
+.card { float:left; margin-right:10px; display:block; height:180px; width:150px; cursor:pointer; border:1px solid #eee; border-radius:3px; }
+.card img { width:100%; height:100%; }
