--- a/css/style.css
+++ b/css/style.css
@@ -25,9 +25,9 @@ body { font-family:'Raleway', Verdana, Tahoma, sans-serif;  font-size:12px; colo
 .button:hover { background-color:#3d95b5; }
 .block { display:block; }
 
-#computerHand { position:absolute; top:0; left:25%; }
+#computerHand { position:absolute; top:-45px; left:25%; }
 #playerHand { position:absolute; bottom:0; left:25%; }
-.card { border:7px solid transparent; float:left; margin-right:10px; display:block; height:130px !important; width:110px !important; cursor:pointer; border-radius:3px; }
+.card { border:7px solid transparent; float:left; margin-right:10px; display:block; height:160px !important; width:119px !important; cursor:pointer; border-radius:3px; }
 .card img { width:100%; height:100%; }
 #playerHand .card:hover { border:7px solid #4e81be; }
 
@@ -43,7 +43,7 @@ body { font-family:'Raleway', Verdana, Tahoma, sans-serif;  font-size:12px; colo
 }
 .playedRound1, .playedRound2, .playedRound3 { float: left; }
 
-#manilha { color: #fff; position:absolute; bottom: 200px; left:-70px; font-weight: bold; }
+#manilha { color: #fff; position:absolute; bottom: 200px; left:-100px; font-weight: bold; }
 #manilha .horizontalCard {
     -webkit-transform: rotate(90deg);
     -moz-transform: rotate(90deg);
